...
        android:layout_marginTop="15dp"
        android:src="@drawable/downvote"
        app:layout_constraintStart_toEndOf="@+id/post_likes"
        app:layout_constraintTop_toBottomOf="@+id/post_title2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
...
